--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:${DB_URL}
+spring.datasource.username=${MYSQL_USER_NAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
