--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:${DB_URL}
 spring.datasource.username=${MYSQL_USER_NAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.datasource.tomcat.max-active=3
+spring.datasource.hakari.maximumPoolSize=3
