--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.datasource.tomcat.max-active=3
-spring.datasource.hakari.maximumPoolSize=3
+spring.datasource.tomcat.initial-size=3
+spring.datasource.tomcat.max-idle=2
+spring.datasource.hikari.maximum-pool-size=3
